# KrakemMain

./: .gitignore  pyproject.toml
DocumentProcessor/: abstractions.py  dtypes.py
KrakemBackend/: manage.py
KrakemBackend/KrakemBackend/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
KrakemBackend/project/: constants.py  models.py  urls.py  utils.py  views.py
KrakemBackend/project/migrations/: 0001_initial.py  0002_remove_resource_url_remove_resourcechunks_url_and_more.py
